--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html> 
 <!--
 Contributers of ITCS333 Assignment 1:
-Student names: Ali Mohamed Ali Hassan, Ali Othman
-Student IDs: 202105103
+Student names: Ali Mohamed Ali Hassan, Ali Othman Abbas
+Student IDs: 202105103, 202208581
 -->
 <html lang="en">
   <!--Head of the website-->
